[gd_scene load_steps=8 format=3 uid="uid://clursb0ipobhl"]

[ext_resource type="Script" path="res://scenes/menus/TitleScene.gd" id="1_qvwe7"]
[ext_resource type="SpriteFrames" uid="uid://4g3mnusnb51k" path="res://assets/images/menus/title/gfDanceTitle.xml" id="2_4ughk"]
[ext_resource type="SpriteFrames" uid="uid://cwsikfputopw8" path="res://assets/images/menus/title/titleEnter.xml" id="2_5j4lm"]
[ext_resource type="SpriteFrames" uid="uid://uba0610kwmcm" path="res://assets/images/menus/title/logoBumpin.xml" id="3_y5nfb"]
[ext_resource type="PackedScene" uid="uid://k23i0spxppyh" path="res://scenes/general/FunnyText.tscn" id="4_ixyqc"]
[ext_resource type="AudioStream" uid="uid://brlj02u3io7on" path="res://assets/sounds/confirmMenu.ogg" id="5_d8urc"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e4mjc"]
blend_mode = 3

[node name="TitleScene" type="Node2D"]
script = ExtResource("1_qvwe7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="GF" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_4ughk")
animation = &"gfDance"

[node name="PressEnter" type="AnimatedSprite2D" parent="."]
position = Vector2(120, 610)
sprite_frames = ExtResource("2_5j4lm")
animation = &"Press Enter to Begin"
centered = false

[node name="Logo" type="AnimatedSprite2D" parent="."]
position = Vector2(-132, -112)
sprite_frames = ExtResource("3_y5nfb")
animation = &"logo bumpin"
centered = false

[node name="Intro" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Intro"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FunnyText" parent="Intro" instance=ExtResource("4_ixyqc")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="AwesomeRect" type="ColorRect" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_e4mjc")
offset_right = 1280.0
offset_bottom = 720.0

[node name="CONFIRM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_d8urc")
bus = &"SFX"
